Mnemosyne 2.2.1 :

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

-For txt import, a text file can now contain a fourth column which will be
 mapped to the 'notes' field of a Vocabulary card.
-When editing or browsing cards, don't reset the state of the scheduler such
 that you need to press 'show answer' again or such that a new card appears
 (reported by Gnome).
-Remember which tags where expanded/collapsed in the tag tree (requested a.o
 by Troy Guze).
-Correctly update flag 'hide pronunciation' in the popup menu (reported by
 Tom Cato Amundsen).
-When merging duplicate cards, merge tags also (requested by Stephan Maseizik).
-Fix regression where all the dialogs would have generic names ('mnemosyne')
 as opposed to e.g. 'Add cards'.
-Correctly format clozes in latex, e.g. [Lorentz force law]
 <$>[\mathbf{F}]=[q]([\mathbf{E}]+[\mathbf{v}\times\mathbf{B}]</$>
 ()requested by acdenh). If you want literal [] in latex, use \left[
 and \right].
-Fix crash when converting multiple cards at the same time between e.g.
 Vocabulary card type and Map card type (reported by Gnome).
-No longer allow mass converting of cards to Cloze card types, as this
 requires editing of the card content for each card anyhow (reported by Scott
 Youngman).
-Unless the 'Prefill tag behaviour' plugin is active, changing card types will
 never change the tag you already filled in, even if it's different from the
 last used tag (reported by Gnome).
-When changing the font for '<all card types>', make a more neutral choice
 for default font in case currently different card types have different
 fonts (reported by Gnome).
-Make sync and sync error handling more robust.
-In case you don't explicitly select a background colour, use your theme's
 background colour as opposed to white for empty cards (reported by ialectum).
-The quote key to left of 1 (`) can now also be used as a short cut for grade 0
 (requested by Kent Stearman).